# Mnemozia

./: .gitignore  README.md  README_ru.md  plugin.yaml  poc_mnemozia.py  pyproject.toml  requirements.txt
mnemozia/: __init__.py  core.py  schema.py
onnx_models/e5-small/: config.json
skills/mnemozia/: SKILL.md
tests/: conftest.py  test_comprehensive.py  test_core.py  test_integration.py
tools/: kb_tool.py
