[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemozia"
version = "2.0.0"
description = "Semantic knowledge base for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alexey Zhukovsky", email = "megazhuk@gmail.com" },
]
keywords = ["hermes", "memory", "knowledge-base", "semantic-search", "pgvector", "postgresql", "llama-cpp", "qwen3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9.0,<3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "pg0-embedded>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/megazhuk/Mnemozia"
"Bug Tracker" = "https://github.com/megazhuk/Mnemozia/issues"

[tool.setuptools.packages.find]
include = ["mnemozia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (needs embedding model)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
